[tool.poetry]
name = "travel-planner"
version = "0.1.0"
description = "Travel Planner API for Art Institute of Chicago"
authors = ["Sofa <sofa.davlietshyna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = ">=0.30.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.6.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
